QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast 
--------------------------------------------------------

ChangeLog


1.0.0  2024-06-19  An Unthinkable Release.

- Making up the unthinkable (aka. v1.0.0)


0.9.91  2024-05-01  A Spring'24 Release Candidate 2.

- Prepping the unthinkable (aka. v1.0.0-rc2)

- Updated to latest framework level (Qt >= 6.7)



0.9.90  2024-04-10  A Spring'24 Release Candidate.

- Prepping the unthinkable (aka. v1.0.0-rc1)


0.9.12  2024-01-24  A Winter'24 Release.

- Updated copyright headers into the New Year (2024).


0.9.11  2023-09-09  An End-of-Summer'23 Release.

- Preppings to next development cycle (Qt >= 6.6)


0.9.10  2023-06-01  A Spring'23 Release.

- Prepping into the next development cycle (with Qt >= 6.5).


0.9.9  2023-03-23  An Early-Spring'23 Release.

- Bumping copyright headers to the brand new year.


0.9.8  2022-12-28  And End-of-Year'22 Release.

- Just bumping into the next develop cycle/season.


0.9.7  2022-10-03  An Early-Autumn'22 Release.

- Bumped version number into the next release season.


0.9.6  2022-04-02  A Spring'22 Release.

- Main application icon is now presented in scalable format (SVG).

- Migrated command line parsing to QCommandLineParser/Option
  (Qt >= 5.2)


0.9.5  2022-01-09  A Winter'22 Release.

- Dropped autotools (autoconf, automake, etc.) build system.


0.9.4  2021-07-04  An Early-Summer'21 Release.

- All builds default to Qt6 (Qt >= 6.1) where available.

- CMake is now the official build system.


0.9.3  2021-05-11  A Spring'21 Release.

- All packaging builds switching to CMake.


0.9.2  2021-03-14  An End-of-Winter'21 Release.

- Bumped version micro/dot number into the next develop cycle.


0.9.1  2021-02-07  A Winter'21 Release.

- Early preparations for the New Year develop(ment) cycle.


0.9.0  2020-12-17  A Winter'20 Release.

- Early fixing to build for Qt >= 6.0.0 and comply with C++17 
  standard.


0.6.3  2020-07-31  A Summer'20 Release.
