@@ -4,6 +4,11 @@ QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast
 ChangeLog
 
 
+GIT HEAD
+
+- Multi-touch/finger support is now an option. (EXPERIMENTAL)
+
+
 1.0.0  2024-06-19  An Unthinkable Release.
 
 - Making up the unthinkable (aka. v1.0.0)
